# gh-backup

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
core/: backup_runner.py  config.py  github_api.py  rate_limit.py  restore.py  statistics.py
tests/: __init__.py  conftest.py  test_backup_runner.py  test_config.py  test_github_api.py  test_rate_limit.py  test_restore.py  test_statistics.py
ui/: __main__.py  app.tcss  backup.py  history.py  main.py  restore.py  settings.py
